--- a/bin/gui/UserScreen.fxml
+++ b/bin/gui/UserScreen.fxml
@@ -317,7 +317,7 @@
                   </HBox>
                </children>
                <HBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                  <Insets />
                </HBox.margin>
             </VBox>
          </children>
