--- a/bin/gui/UserScreen.fxml
+++ b/bin/gui/UserScreen.fxml
@@ -15,112 +15,124 @@
 
 <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="1366.0" style="-fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #010a06, #05120c, #010a06);" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.UserScreenController">
    <children>
-      <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" style="-fx-border-color: white; -fx-border-radius: 18 18 18 18;">
+      <VBox alignment="CENTER">
          <HBox.margin>
             <Insets bottom="90.0" left="20.0" right="20.0" top="90.0" />
          </HBox.margin>
          <children>
-            <Label fx:id="lblJogador" alignment="TOP_CENTER" text="Jogador" textAlignment="CENTER" textFill="WHITE">
+            <Label fx:id="lblJogador1" alignment="TOP_CENTER" text="Agente da Ordem" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Bodoni MT" size="28.0" />
+                  <Font name="Bodoni MT" size="35.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="20.0" top="40.0" />
+                  <Insets bottom="20.0" />
                </VBox.margin>
             </Label>
-            <VBox>
+            <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" style="-fx-border-color: white; -fx-border-radius: 18 18 18 18;">
                <children>
-                  <Label text="Nome" textFill="WHITE">
+                  <Label fx:id="lblJogador" alignment="TOP_CENTER" text="Jogador" textAlignment="CENTER" textFill="WHITE">
                      <font>
-                        <Font name="Bodoni MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtNome" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Nome do Personagem">
-                     <font>
-                        <Font name="Bodoni MT" size="14.0" />
+                        <Font name="Bodoni MT" size="28.0" />
                      </font>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets bottom="20.0" top="40.0" />
                      </VBox.margin>
-                  </TextField>
-               </children>
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </VBox>
-            <VBox>
-               <children>
-                  <Label text="Ocupação" textFill="WHITE">
-                     <font>
-                        <Font name="Bodoni MT" size="20.0" />
-                     </font>
                   </Label>
-                  <TextField fx:id="txtOcupacao" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Ocupação do Personagem">
-                     <font>
-                        <Font name="Bodoni MT" size="14.0" />
-                     </font>
+                  <VBox>
+                     <children>
+                        <Label text="Nome" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtNome" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Nome do Personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="20.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets left="20.0" right="20.0" />
                      </VBox.margin>
-                  </TextField>
-               </children>
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </VBox>
-            <VBox>
-               <children>
-                  <Label text="Idade" textFill="WHITE">
-                     <font>
-                        <Font name="Bodoni MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtIdade" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Idade do Personagem">
-                     <font>
-                        <Font name="Bodoni MT" size="14.0" />
-                     </font>
-                  </TextField>
-               </children>
-               <VBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" />
-               </VBox.margin>
-            </VBox>
-            <VBox>
-               <children>
-                  <Label text="Sexo" textFill="WHITE">
-                     <font>
-                        <Font name="Bodoni MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtSexo" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Sexo do personagem">
-                     <font>
-                        <Font name="Bodoni MT" size="14.0" />
-                     </font>
-                  </TextField>
-               </children>
-               <VBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" />
-               </VBox.margin>
-            </VBox>
-            <VBox>
-               <children>
-                  <Label text="Local de nascimento" textFill="WHITE">
-                     <font>
-                        <Font name="Bodoni MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtLocalNascimento" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Local de nascimento do personagem">
-                     <font>
-                        <Font name="Bodoni MT" size="14.0" />
-                     </font>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Ocupação" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtOcupacao" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Ocupação do Personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="20.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
                      <VBox.margin>
-                        <Insets bottom="40.0" />
+                        <Insets left="20.0" right="20.0" />
                      </VBox.margin>
-                  </TextField>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Idade" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtIdade" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Idade do Personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Sexo" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtSexo" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Sexo do personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Local de nascimento" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtLocalNascimento" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Local de nascimento do personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="40.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
                </children>
-               <VBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" />
-               </VBox.margin>
             </VBox>
          </children>
       </VBox>
@@ -143,7 +155,7 @@
                      <children>
                         <HBox alignment="CENTER" prefHeight="530.0" prefWidth="726.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <ImageView fx:id="imgView" fitHeight="411.0" fitWidth="583.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="imgView" fitHeight="488.0" fitWidth="656.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                         <VBox alignment="BOTTOM_RIGHT" layoutX="433.0" prefHeight="530.0" prefWidth="293.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -209,7 +221,7 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
                            </padding>
                         </ListView>
-                        <TextField fx:id="txtMessage" focusTraversable="false" minHeight="30.0" onAction="#onTxtMessage" prefHeight="50.0" prefWidth="258.0" promptText="Digite aqui" style="-fx-border-color: transparent; -fx-background-radius: 0 0 20 20; -fx-focus-color: transparent; -fx-faint-color: transparent; -fx-background-color: #383838; -fx-border-color: #4f4f4f; -fx-border-width: 1 0 0 0; -fx-text-fill: white;">
+                        <TextField fx:id="txtMessage" focusTraversable="false" minHeight="30.0" onAction="#onTxtMessage" prefHeight="50.0" prefWidth="258.0" promptText="Digite aqui" style="-fx-background-radius: 0 0 20 20; -fx-focus-color: transparent; -fx-faint-color: transparent; -fx-background-color: #383838; -fx-border-color: #4f4f4f; -fx-border-width: 1 0 0 0; -fx-text-fill: white;">
                            <VBox.margin>
                               <Insets bottom="40.0" left="20.0" right="20.0" />
                            </VBox.margin>
